# rabbitmq-c

./: CMakeLists.txt  Makefile.am  README.vms  configure.ac  index.html  params.json
docs/: Doxyfile.in  GettingStarted.md  Install.md  Mainpage.md  MemoryManagement.md  TODO.md
docs/0.2/: amqp_8h.html  amqp_8h_source.html  amqp__framing_8h.html  amqp__framing_8h_source.html  annotated.html  classes.html  deprecated.html  dir_b74d249c7b6f97c2e7f71900de050c3e.html  dir_df8d7e2f392872630f707837372814f7.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_vars.html  functions_vars_0x61.html  functions_vars_0x62.html  functions_vars_0x63.html  functions_vars_0x64.html  functions_vars_0x65.html  functions_vars_0x66.html  (+125 more)
examples/: CMakeLists.txt  amqp_connect.c  amqp_connect_uri.c
librabbitmq/: CMakeLists.txt  amqp.h  amqp_api.c  amqp_channel_pools.c  amqp_channel_pools.h  amqp_connection.c  amqp_cyassl.c  amqp_gnutls.c  amqp_mem.c  amqp_openssl.c  amqp_private.h  amqp_socket.c  amqp_tcp_socket.c  amqp_timer.c  amqp_timer.h  codegen.py  descrip.mms
tests/: CMakeLists.txt  test_hashtable.cpp  test_pools.cpp  test_tables.c
(+39 files in other folders)
